--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "appcenter": "1.9.0",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4"
   },
