--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-appsync": "^1.4.0",
+    "aws-appsync-react": "^1.2.0",
+    "aws-sdk": "^2.345.0",
+    "graphql-tag": "^2.10.0",
     "react": "16.6.0-alpha.8af6728",
+    "react-apollo": "^2.2.4",
     "react-native": "0.57.4"
   },
   "devDependencies": {
+    "@aws-amplify/cli": "^0.1.29",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.3",
