--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "postinstall": "./scripts/fix_aws_sdk_types.sh",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
