--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.6.0-alpha.8af6728",
     "react-apollo": "^2.2.4",
     "react-native": "^0.57.4",
+    "react-native-ble-plx": "^1.0.0",
     "ts-jest": "^23.10.4",
     "ts-transform-graphql-tag": "^0.2.0"
   },
