--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aws-appsync-react": "^1.2.0",
     "aws-sdk": "^2.346.0",
     "graphql-tag": "^2.10.0",
+    "ramda": "^0.25.0",
     "react": "16.6.0-alpha.8af6728",
     "react-apollo": "^2.2.4",
     "react-native": "^0.57.4",
@@ -29,6 +30,7 @@
     "@aws-amplify/cli": "^0.1.29",
     "@types/graphql": "^14.0.3",
     "@types/jest": "^23.3.9",
+    "@types/ramda": "^0.25.41",
     "@types/react": "^16.4.18",
     "@types/react-native": "^0.57.7",
     "babel-jest": "23.6.0",
